style: remove text-align from root and improve AllPhotos component styles fix: update likedBy type in IPhotosFromBackend to IUser[]

--- a/src/components/AllPhotos/allPhotos.module.css
+++ b/src/components/AllPhotos/allPhotos.module.css
@@ -7,33 +7,44 @@
         outline: none !important;
     }
 
-    .actions{
+    .actions {
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin-bottom: 20px;
 
-        .left{
+        .left {
             display: flex;
             align-items: center;
+            gap: 8px;
         }
 
-        .right{
+        .right {
             display: flex;
             align-items: center;
             gap: 20px;
+            flex-wrap: wrap;
 
-            .filters{
-                display: flex;
-                gap: 10px;
-            }
-    
-            .sort{
+            .filters, .sort{
                 display: flex;
                 align-items: center;
                 gap: 10px;
             }
         }
+    }
+}
 
+@media (max-width: 700px) {
+    .allPhotosConatiner {
+        .actions {
+            flex-direction: column;
+            align-items: stretch;
+            gap: 20px;
+        }
+
+        .actions .left,
+        .actions .right {
+            flex: 1
+        }
     }
 }
